--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -2,18 +2,45 @@
 <html lang="en" xmlns:th ="http://www.thymleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Patients</title>
+    <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/5.3.3/css/bootstrap.min.css">
+
 </head>
 <body>
-<h3> Liste des patients</h3>
-<table>
-    <thead>
-    <tr>
-        <td>ID</td> <td>Nom</td> <td>Prenom</td> <td>Date</td> <td>Score</td> <td>Malade</td>
-    </tr>
+<div class="p-3 m-2" >
+    <div class="card">
+    <div class="card-header">Liste des patients</div>
+    <div class="card-body">
+        <table class="table table-striped">
+            <thead>
+            <tr>
+                <td>ID</td> <td>Nom</td> <td>Prenom</td> <td>Date</td> <td>Score</td> <td>Malade</td>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="p: ${ListPatiants}" >
+                <td th:text="${p.id}"></td>
+                <td th:text="${p.nom}"></td>
+                <td th:text="${p.prenom}"></td>
+                <td th:text="${p.dateNaissance}"></td>
+                <td th:text="${p.score}"></td>
+                <td th:text="${p.malade}"></td>
+                <td>
+                    <a class="btn btn-danger" th:href="@{deletePatient(id=${p.id})}">Delete</a>
+                </td>
 
 
-    </thead>
-</table>
+
+            </tr>
+            </tbody>
+
+
+        </table>
+  </div>
+
+ </div>
+  </div>
+
+
 </body>
 </html>
