--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -11,6 +11,11 @@
     <div class="card">
     <div class="card-header">Liste des patients</div>
     <div class="card-body">
+        <form method="get" th:action="@{/index}">
+            <label>Keyword</label>
+            <input type="text" name="keyword">
+            <button type="submit" class="btn btn-primary">Search</button>
+        </form>
         <table class="table table-striped">
             <thead>
             <tr>
