--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -45,7 +45,9 @@
         <ul class="nav nav-pills">
 
             <li th:each="pages,status :${page}">
-                <a th:class="${status.index==currentPage?'btn btn-info m-1':'btn btn-outline-info m-1'}" th:href="@{/index(page=${status.index})}" class ="btn btn-outline-info m-1" th:text="${status.index}"></a>
+                <a th:class="${status.index==currentPage?'btn btn-info m-1':'btn btn-outline-info m-1'}"
+                   th:href="@{/index(page=${status.index},keyword=${keyword})}"
+                   th:text="${status.index +1}"></a>
 
             </li>
         </ul>
