--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -55,7 +55,8 @@
 
  </div>
   </div>
-
-
+<form th:action="@{/gotodoctors}" method="get">
+    <button type="submit" class="btn btn-success">Go to Doctors</button>
+</form>
 </body>
 </html>
